<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ativar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.filipe.ativacaodeconta.AtivarActivity">

    <TextView
        style="@style/titulo_passo"
        android:text="@string/primeiro_passo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_chave_ativacao"/>

    <TextView
        style="@style/titulo_passo"
        android:text="@string/segundo_passo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/et_chave"
        android:id="@+id/etChave"/>

    <TextView
        style="@style/titulo_passo"
        android:text="@string/terceiro_passo" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_registrar"
        android:onClick="pegarChave"/>
</LinearLayout>
